force-app/main/default/objects/Monthly_Support_Metrics__c/Monthly_Support_Metrics__c.object-meta.xml
<CustomObject>
    <label>Monthly Support Metric</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{0000}</displayFormat>
        <label>Monthly Support Metrics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Support Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>