force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Average_Age_to_Close_Hours__c.field-meta.xml
<CustomField>
    <fullName>Average_Age_to_Close_Hours__c</fullName>
    <label>Average Age to Close (Hours)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>