force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Average_Cases_Closed_Per_Rep_Day__c.field-meta.xml
<CustomField>
    <fullName>Average_Cases_Closed_Per_Rep_Day__c</fullName>
    <description>Source of Data: Calculation, total number of cases closed/number of reps in primary</description>
    <label>Average Cases Closed Per Rep/Day</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>