force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Average_Talk_Time_Min_Sec__c.field-meta.xml
<CustomField>
    <fullName>Average_Talk_Time_Min_Sec__c</fullName>
    <description>Source of Data: ACD Report</description>
    <label>Average Talk Time (Mins:Secs)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>