force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Average_Work_Effort_Mins__c.field-meta.xml
<CustomField>
    <fullName>Average_Work_Effort_Mins__c</fullName>
    <description>Source of Data: SFDC - Call Center Activity Report (very bottom has average)</description>
    <label>Average Work Effort (Mins)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>