force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Backlog_by_Status__c.field-meta.xml
<CustomField>
    <fullName>Backlog_by_Status__c</fullName>
    <description>(Awaiting Support, Dev, PS, or Customer)
Source of Data: Roadnet Case Backlog</description>
    <label>Backlog by Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>