force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Cases_Closed_Same_Day__c.field-meta.xml
<CustomField>
    <fullName>Cases_Closed_Same_Day__c</fullName>
    <label>Cases Closed Same Day</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>