force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Cases_Created_Via_Support_Portal__c.field-meta.xml
<CustomField>
    <fullName>Cases_Created_Via_Support_Portal__c</fullName>
    <description>Source of Data: SFDC - Total Cases Created Report</description>
    <label>Cases Created Via Support Portal</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>