force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Closed_Open_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Closed_Open_Ratio__c</fullName>
    <description>Source of Data: Calculation of Total Cases Close/Total Cases Opened</description>
    <label>Closed/Open Ratio</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>