force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Cost_per_Case__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Case__c</fullName>
    <description>Source of Data: n/a</description>
    <label>Cost per Case</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>