force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Cost_per_Customer__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Customer__c</fullName>
    <description>Source of Data: Scott Financial</description>
    <label>Cost per Customer</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>