force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Customer_Reported_Defects__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reported_Defects__c</fullName>
    <description>Source of Data: SFDC - Jira Tasks Submitted Report</description>
    <label>Customer Reported Defects</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>