force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Customer_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction__c</fullName>
    <description>Source of Data: SFDC - Roadnet Support Survey Responses</description>
    <label>Customer Satisfaction</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>