force-app/main/default/objects/Monthly_Support_Metrics__c/fields/First_Contact_Resolution__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Resolution__c</fullName>
    <label>First Contact Resolution</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>