force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Overall_Support_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Overall_Support_Utilization__c</fullName>
    <description>Source of Data: Future SFDC Financial Force Report</description>
    <label>Overall Support Utilization</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>