force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Re_Open_Rate__c.field-meta.xml
<CustomField>
    <fullName>Re_Open_Rate__c</fullName>
    <description>Source of Data: SFDC Case History - Reopened (search for re-opened)</description>
    <label>Re-Open Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>