force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Speed_of_Answer_seconds__c.field-meta.xml
<CustomField>
    <fullName>Speed_of_Answer_seconds__c</fullName>
    <label>Speed of Answer (Seconds)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>