force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Support_Margin_Overall__c.field-meta.xml
<CustomField>
    <fullName>Support_Margin_Overall__c</fullName>
    <description>Source of Data: Scott Financial</description>
    <label>Support Margin Overall</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>