force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Support_Margin_per_Customer__c.field-meta.xml
<CustomField>
    <fullName>Support_Margin_per_Customer__c</fullName>
    <description>Source of Data: Scott Finanacial</description>
    <label>Support Margin per Customer</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>