force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Time_to_Close_Hours__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Close_Hours__c</fullName>
    <description>Source of Data: SFDC - Call Center Activity Report</description>
    <label>Time to Close (Hours)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>