force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Total_Cases_Opened__c.field-meta.xml
<CustomField>
    <fullName>Total_Cases_Opened__c</fullName>
    <description>Source of Data: SFDC - Total Cases Created Report</description>
    <label>Total Cases Opened</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>