force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Total_Headcount_Renewals__c.field-meta.xml
<CustomField>
    <fullName>Total_Headcount_Renewals__c</fullName>
    <description>Source of Data: JW</description>
    <label>Total Headcount (Renewals)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>