force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Total_Inbound_Calls_Abandoned__c.field-meta.xml
<CustomField>
    <fullName>Total_Inbound_Calls_Abandoned__c</fullName>
    <description>Source of Data: ACD Reports</description>
    <label>Total Inbound Calls Abandoned</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>