force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Total_Inbound_Calls_Handled__c.field-meta.xml
<CustomField>
    <fullName>Total_Inbound_Calls_Handled__c</fullName>
    <description>Source of Data: ACD Reports</description>
    <label>Total Inbound Calls Handled</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>