force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Total_Inbound_Calls_Priority__c.field-meta.xml
<CustomField>
    <fullName>Total_Inbound_Calls_Priority__c</fullName>
    <label>Total Inbound Calls Priority</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>