force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Total_Inbound_Calls_Source__c.field-meta.xml
<CustomField>
    <fullName>Total_Inbound_Calls_Source__c</fullName>
    <label>Total Inbound Calls Source</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>