force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Utilization_Primary__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Primary__c</fullName>
    <description>Source of Data: Future SFDC Financial Force Report</description>
    <label>Utilization Primary</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>