force-app/main/default/objects/Monthly_Support_Metrics__c/fields/Utilization_SS__c.field-meta.xml
<CustomField>
    <fullName>Utilization_SS__c</fullName>
    <description>Source of Data: Future SFDC Financial Force Report</description>
    <label>Utilization SS</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>